--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="#" class="logo">
                 <img src="images/logo.png" alt="Logo">
             </a>
-            <nav class="menu">
+            <nav class="menu uppercase">
                 <ul>
                     <li><a href="#">Моя библиотека</a></li>
                     <li><a href="#">Мои покупки</a></li>
@@ -28,7 +28,7 @@
 
     <section class="main container font-size-0">
         <div class="main-info">
-            <h1>Сталкер</h1>
+            <h1 class="uppercase">Сталкер</h1>
             <div class="main-info-text">
                 1979, фантастика, драма, СССР
             </div>
@@ -56,7 +56,7 @@
     </section>
 
     <section class="films container">
-        <h2>Другие фильмы</h2>
+        <h2 class="uppercase">Другие фильмы</h2>
         <div class="films-items font-size-0">
             <a href="#" class="films-item">
                 <img src="images/image1.png" alt="Обложка">
